--- a/packages/q-view/src/dialog/index.less
+++ b/packages/q-view/src/dialog/index.less
@@ -24,10 +24,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    padding: 32px 18px 18px;
+    padding: 36px 18px 10px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     max-width: 90vw;
+    overflow: hidden;
 
     &--close {
       position: absolute;
@@ -36,8 +37,8 @@
       cursor: pointer;
 
       svg {
-        width: 28px;
-        height: 28px;
+        width: 30px;
+        height: 30px;
       }
     }
 
