--- a/packages/q-view/src/doc-view/index.less
+++ b/packages/q-view/src/doc-view/index.less
@@ -2,7 +2,7 @@
   display: block;
   border: 1px solid #e5e5e5;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 10px;
   margin-bottom: 20px;
   .title {
     font-weight: bold;
