--- a/packages/q-view/src/image-resize/index.less
+++ b/packages/q-view/src/image-resize/index.less
@@ -63,4 +63,51 @@
       }
     }
   }
+  .croppers {
+    border: 1px dashed black;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 60%;
+    height: 40%;
+    .cropper {
+      display: block;
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      position: absolute;
+      &.lt {
+        left: 0;
+        top: 0;
+      }
+      &.ct {
+        left: 50%;
+        top: 0;
+        transform: translate(-50%);
+      }
+      &.rt {
+        right: 0;
+        top: 0;
+      }
+      &.lb {
+        bottom: 0;
+        left: 0;
+      }
+      &.cb {
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%);
+      }
+      &.rb {
+        right: 0;
+        bottom: 0;
+      }
+    }
+  }
+  .toolbar {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -100%);
+  }
 }
