--- a/packages/q-view/src/attr-table/index.less
+++ b/packages/q-view/src/attr-table/index.less
@@ -1,10 +1,30 @@
 :host {
   display: inline-block;
+  // table {
+  //   border-collapse: collapse;
+  //   td {
+  //     padding: 2px 20px;
+  //     text-align: center;
+  //   }
+  // }
   table {
     border-collapse: collapse;
-    td {
-      padding: 2px 20px;
-      text-align: center;
-    }
+    width: 100%;
+  }
+
+  th,
+  td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+  }
+
+  th {
+    background-color: #f2f2f2;
+  }
+
+  /* 悬停效果 */
+  tr:hover {
+    background-color: #f5f5f5;
   }
 }
