--- a/packages/q-view/src/cropper/index.less
+++ b/packages/q-view/src/cropper/index.less
@@ -3,13 +3,36 @@
   transform: translate3d(0, 0, 0);
   .content {
     position: relative;
-    background-color: rgba(0, 0, 0, 0.1);
+    .bg {
+      width: 100%;
+      height: 100%;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+    &::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
   }
 
   .croppers {
-    border: 1px dashed grey;
+    border: 1px dashed #e5e5e5;
     position: absolute;
     overflow: hidden;
+    z-index: 10;
+    box-sizing: border-box;
 
     cursor: move;
     background-color: transparent;
@@ -171,8 +194,10 @@
 
     .preview {
       display: block;
-      user-select: none;
-      pointer-events: none;
     }
+  }
+  img {
+    user-select: none;
+    pointer-events: none;
   }
 }
