--- a/packages/q-view/src/toc/index.less
+++ b/packages/q-view/src/toc/index.less
@@ -9,6 +9,7 @@
     max-width: 10em;
     cursor: pointer;
     font-weight: bold;
+    font-size: 14px;
     &:hover {
       text-decoration: underline;
       color: #409eff;
