--- a/packages/q-view/src/doc-view/index.less
+++ b/packages/q-view/src/doc-view/index.less
@@ -4,6 +4,8 @@
   border-radius: 5px;
   padding-bottom: 20px;
   margin-bottom: 20px;
+  font-family: monospace;
+
   .title {
     font-weight: 700;
     font-size: 25px;
@@ -11,6 +13,10 @@
     margin-bottom: 10px;
     border-bottom: 1px solid #e5e5e5;
     padding: 0 20px;
+  }
+  .title-slot {
+    padding: 0 20px;
+    margin-bottom: 10px;
   }
   .attr {
     border-bottom: 1px solid #e5e5e5;
