--- a/packages/q-view/src/tabs/index.less
+++ b/packages/q-view/src/tabs/index.less
@@ -11,17 +11,18 @@
 
     .fill {
       flex: 1;
-      height: 30px;
-      padding: 5px 10px;
+      height: 28px;
+      padding: 5px 15px;
       border-bottom: 1px solid #e5e5e5;
     }
     &-item {
-      padding: 5px 10px;
+      padding: 5px 15px;
       cursor: pointer;
-      height: 30px;
-      line-height: 30px;
+      height: 28px;
+      line-height: 28px;
       font-size: 15px;
       text-align: center;
+      letter-spacing: 1px;
       border-bottom: 1px solid #e5e5e5;
 
       &.active {
