--- a/packages/q-view/src/toc/index.less
+++ b/packages/q-view/src/toc/index.less
@@ -1,18 +1,66 @@
+@width: 170px;
 :host {
   position: fixed;
-  top: 0;
+  top: 10px;
   right: 0;
-  background-color: white;
-  border: 1px solid #e5e5e5;
-  padding: 10px;
-  div {
-    max-width: 10em;
+
+  .q-toc {
+    display: flex;
+    align-items: center;
+    transition: all 0.4s;
+    transform: translate(calc(@width + 22px));
+
+    &.show {
+      transform: translate(0);
+    }
+  }
+
+  .control {
+    border-radius: 5px;
+    padding: 4px 18px;
     cursor: pointer;
-    font-weight: bold;
-    font-size: 14px;
-    &:hover {
-      text-decoration: underline;
-      color: #409eff;
+    letter-spacing: 1px;
+    color: white;
+    background-color: #409eff;
+  }
+
+  .content {
+    width: @width;
+    border: 1px solid #e5e5e5;
+    background-color: white;
+    padding: 10px;
+
+    .item {
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 14px;
+      margin-bottom: 4px;
+      &:hover {
+        text-decoration: underline;
+        color: #409eff;
+      }
+    }
+  }
+
+  @keyframes show {
+    from {
+      opacity: 0;
+      transform: translate(200%);
+    }
+
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  @keyframes hide {
+    from {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    to {
+      opacity: 0;
+      transform: translate(200%);
     }
   }
 }
