--- a/packages/q-view/src/image-resize/index.less
+++ b/packages/q-view/src/image-resize/index.less
@@ -12,8 +12,6 @@
     &.focus {
       cursor: zoom-in;
     }
-    &.cropper {
-    }
   }
   .content {
     width: 100%;
@@ -69,7 +67,7 @@
 
   .toolbar {
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 50%;
     transform: translate(-50%, -100%);
   }
