--- a/packages/q-view/src/image-cropper/index.less
+++ b/packages/q-view/src/image-cropper/index.less
@@ -33,7 +33,6 @@
     overflow: hidden;
     z-index: 10;
     box-sizing: border-box;
-
     cursor: move;
     background-color: transparent;
     .cropper {
@@ -191,13 +190,57 @@
         }
       }
     }
+    .btn {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      padding: 2px;
+      border-radius: 4px;
+      transform: translateY(-50%);
+      z-index: 1;
+      background-color: rgba(0, 0, 0, 0.4);
 
-    .preview {
-      display: block;
+      svg {
+        cursor: pointer;
+        display: block;
+        fill: white;
+      }
+
+      .hover-tip {
+        position: relative;
+        &::before {
+          content: '';
+          display: none;
+          position: absolute;
+          color: #fff;
+          z-index: 1;
+          top: 50%;
+          left: 0;
+          font-size: 12px;
+          white-space: nowrap;
+          padding: 0 5px;
+          transform: translate(-100%, -50%);
+        }
+      }
+
+      .confirm {
+        &:hover::before {
+          display: block;
+          content: '确认';
+        }
+      }
+
+      .cancel {
+        &:hover::before {
+          display: block;
+          content: '取消';
+        }
+      }
     }
   }
   img {
     user-select: none;
+    display: block;
     pointer-events: none;
   }
 }
