--- a/packages/q-view/src/image-cropper-resize/index.less
+++ b/packages/q-view/src/image-cropper-resize/index.less
@@ -1,10 +1,13 @@
 :host {
   display: block;
+  padding-top: 30px;
   .toolbar {
     .cropper {
       border-radius: 5px;
-      padding: 4px 10px;
+      padding: 0 10px;
       margin-left: 10px;
+      height: 30px;
+      line-height: 30px;
       border: 1px solid transparent;
       cursor: pointer;
       letter-spacing: 1px;
