--- a/packages/q-view/src/dialog/index.less
+++ b/packages/q-view/src/dialog/index.less
@@ -6,16 +6,16 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999;
   background-color: rgba(0, 0, 0, 0.5);
+  display: none;
 
   &.show {
     display: block;
-    animation: show 0.4s forwards;
+    animation: show 0.3s forwards;
   }
 
   &.hide {
-    display: none;
+    animation: hide 0.3s forwards;
   }
 
   &-main {
@@ -82,12 +82,12 @@
 
   @keyframes hide {
     0% {
+      display: block;
       opacity: 1;
-      transform: scale(1);
     }
 
     100% {
-      transform: scale(0);
+      display: block;
       opacity: 0;
     }
   }
