--- a/packages/q-view/src/image-resize/index.less
+++ b/packages/q-view/src/image-resize/index.less
@@ -40,26 +40,10 @@
       height: @anchor-width;
       background-color: rgba(255, 255, 255, 0.9);
       border: 1px solid;
-      &.lt {
-        top: @anchor-offset;
-        left: @anchor-offset;
-        cursor: nw-resize;
-      }
 
-      &.lb {
-        bottom: @anchor-offset;
-        cursor: sw-resize;
-        left: @anchor-offset;
-      }
-
-      &.rt {
-        right: @anchor-offset;
-        cursor: ne-resize;
-        top: @anchor-offset;
-      }
       &.rb {
         right: @anchor-offset;
-        cursor: se-resize;
+        cursor: nwse-resize;
         bottom: @anchor-offset;
       }
     }
