--- a/packages/q-view/src/toc/index.less
+++ b/packages/q-view/src/toc/index.less
@@ -16,7 +16,7 @@
   }
 
   .control {
-    border-radius: 5px;
+    border-radius: 5px 0 0 5px;
     padding: 4px 18px;
     cursor: pointer;
     letter-spacing: 1px;
