--- a/packages/q-view/src/image-cropper/index.less
+++ b/packages/q-view/src/image-cropper/index.less
@@ -1,8 +1,12 @@
 :host {
   display: block;
+  @dragHeight: 4px;
+  @dragWidth: 20px;
   transform: translate3d(0, 0, 0);
+  max-width: 100%;
   .content {
     position: relative;
+    max-width: 100%;
     .bg {
       width: 100%;
       height: 100%;
@@ -32,13 +36,13 @@
     position: absolute;
     overflow: hidden;
     z-index: 10;
-    box-sizing: border-box;
     cursor: move;
+    box-sizing: border-box;
     background-color: transparent;
     .cropper {
       display: block;
-      width: 18px;
-      height: 18px;
+      width: @dragWidth;
+      height: @dragWidth;
       position: absolute;
       z-index: 1;
       &.lt {
@@ -48,7 +52,7 @@
         &::before {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           top: 0;
@@ -59,7 +63,7 @@
         &::after {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           top: 0;
@@ -78,7 +82,7 @@
         &::before {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           top: 0;
@@ -94,7 +98,7 @@
         &::before {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           top: 0;
@@ -105,7 +109,7 @@
         &::after {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           top: 0;
@@ -123,7 +127,7 @@
         &::before {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           bottom: 0;
@@ -134,7 +138,7 @@
         &::after {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           bottom: 0;
@@ -153,7 +157,7 @@
         &::before {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           bottom: 0;
@@ -168,7 +172,7 @@
         &::before {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           bottom: 0;
@@ -179,7 +183,7 @@
         &::after {
           content: '';
           display: block;
-          height: 4px;
+          height: @dragHeight;
           background-color: white;
           position: absolute;
           bottom: 0;
@@ -195,7 +199,7 @@
       top: 50%;
       right: 0;
       padding: 2px;
-      border-radius: 4px;
+      border-radius: 4px 0 0 4px;
       transform: translateY(-50%);
       z-index: 1;
       background-color: rgba(0, 0, 0, 0.4);
@@ -208,6 +212,10 @@
 
       .hover-tip {
         position: relative;
+        margin-bottom: @dragHeight;
+        &:last-child {
+          margin-bottom: 0;
+        }
         &::before {
           content: '';
           display: none;
@@ -218,8 +226,8 @@
           left: 0;
           font-size: 12px;
           white-space: nowrap;
-          padding: 0 5px;
-          transform: translate(-100%, -50%);
+          padding: 0 @dragHeight;
+          transform: translate(-100%, -50%) scale(0.7);
         }
       }
 
@@ -229,7 +237,12 @@
           content: '确认';
         }
       }
-
+      .full {
+        &:hover::before {
+          display: block;
+          content: '原图';
+        }
+      }
       .cancel {
         &:hover::before {
           display: block;
