--- a/packages/q-view/src/image-cropper/index.less
+++ b/packages/q-view/src/image-cropper/index.less
@@ -55,6 +55,7 @@
           height: @dragHeight;
           background-color: white;
           position: absolute;
+          outline: 1px solid grey;
           top: 0;
           left: 0;
           width: 100%;
@@ -67,6 +68,7 @@
           background-color: white;
           position: absolute;
           top: 0;
+          outline: 1px solid grey;
           left: 0;
           width: 100%;
           transform-origin: left top;
@@ -85,6 +87,7 @@
           height: @dragHeight;
           background-color: white;
           position: absolute;
+          outline: 1px solid grey;
           top: 0;
           left: 0;
           width: 100%;
@@ -101,6 +104,7 @@
           height: @dragHeight;
           background-color: white;
           position: absolute;
+          outline: 1px solid grey;
           top: 0;
           left: 0;
           width: 100%;
@@ -113,6 +117,7 @@
           background-color: white;
           position: absolute;
           top: 0;
+          outline: 1px solid grey;
           left: 0;
           width: 100%;
           transform-origin: right top;
@@ -131,6 +136,7 @@
           background-color: white;
           position: absolute;
           bottom: 0;
+          outline: 1px solid grey;
           left: 0;
           width: 100%;
         }
@@ -143,6 +149,7 @@
           position: absolute;
           bottom: 0;
           left: 0;
+          outline: 1px solid grey;
           width: 100%;
           transform-origin: left bottom;
           transform: rotate(-90deg) translateY(100%);
@@ -160,6 +167,7 @@
           height: @dragHeight;
           background-color: white;
           position: absolute;
+          outline: 1px solid grey;
           bottom: 0;
           left: 0;
           width: 100%;
@@ -175,6 +183,7 @@
           height: @dragHeight;
           background-color: white;
           position: absolute;
+          outline: 1px solid grey;
           bottom: 0;
           left: 0;
           width: 100%;
@@ -186,6 +195,7 @@
           height: @dragHeight;
           background-color: white;
           position: absolute;
+          outline: 1px solid grey;
           bottom: 0;
           right: 0;
           width: 100%;
